- fix padding to make when page changed, the breadcrumb looks not jump

--- a/frontends/web/src/views/org/v-org-users.pcss
+++ b/frontends/web/src/views/org/v-org-users.pcss
@@ -2,7 +2,7 @@ v-org-users {
 	display: flex;
 	flex-direction: column;
 	height: 100%;
-	padding: 3rem;
+	padding: 2rem 3rem;
 	gap: 2rem;
 
 	.info-main {
