--- a/frontends/web/src/views/pack/v-pack-versions.pcss
+++ b/frontends/web/src/views/pack/v-pack-versions.pcss
@@ -1,7 +1,7 @@
 v-pack-versions {
 	display: flex;
 	height: 100%;
-	padding: 3rem;
+	padding: 2rem 3rem;
 	flex-direction: column;
 	gap: 2rem;
 
